# fopengl

./: CMakeLists.txt  fopengl.hpp  main.cpp  main.cpp.old  shader.cpp  shader.hpp
include/: fopengl.hpp  shader.hpp
